# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  maarittelydokumentti.md  testaus.md  tyoaikakirjanpito.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: .index.py.swp  eventqueue.py  gameloop.py  index.py  level.py  matrix.py  renderer.py  square.py
src/application_logic/: eventqueue.py  gameloop.py  level.py  matrix.py  square.py
src/tests/: eventqueue_test.py  gameloop_test.py  level_test.py  matrix_test.py  square_test.py
src/user_interface/: renderer.py
