[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Anna Suuronen <annasuuronen@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^3.0"
pygame = "^2.0.1"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.0"
autopep8 = "^1.5.6"
coverage = "^5.5"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
